--- a/paginainicial.html
+++ b/paginainicial.html
@@ -16,16 +16,14 @@
         </div>
         <nav>
             <ul class="menu">
-                <li><a href="#home">PÁGINA INICIAL |</a></li>
+                <li><a href="paginainicial.html"> PÁGINA INICIAL |</a></li>
                 <li class="dropdown">
                     <a href="">NOTÍCIAS |</a>
                     <div class="dropdown-content">
                         <a href="tecnologias.html">Tecnologia</a>
-                        <a href="economia.html">Economia</a>
                         <a href="esporte.html">Esporte</a>
-                        <a href="contabilidade.html">Contabilidade</a>
-                        <a href="nacionais.html">Nacionais</a>
-                        <a href="internacionais.html">Internacionais</a>
+                        <a href="internas.html">Internas</a>
+                        <a href="externas.html">Externas</a>
                     </div>
                 </li>
                 <li class="dropdown">
