--- a/registro.html
+++ b/registro.html
@@ -26,7 +26,7 @@
     
       <button type="submit">Registrar</button>
     </form>
-    <p>JÁ TEM UMA CONTA? <a href="index.html">   FAÇA LÇOGIN AQUI.</a></p>
+    <p>JÁ TEM UMA CONTA? <a href="index.html">   FAÇA LOGIN AQUI.</a></p>
   </div>
 </body>
 </html>
@@ -111,14 +111,14 @@ button:hover {
 
 p {
   text-align: center;
-  color: #555;
+  color: whitesmoke;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bolder;
   font-size: 12px;
 }
 
 a {
-  color: whitesmoke;
+  color: black;
   text-decoration: none;
 }
 
