--- a/tecnologias.html
+++ b/tecnologias.html
@@ -18,12 +18,10 @@
                 <li class="dropdown">
                     <a href="">NOTÍCIAS |</a>
                     <div class="dropdown-content">
-                        <a href="C:\xampp\htdocs\jornallogin\tecnologias.html">Tecnologia</a>
-                        <a href="C:\xampp\htdocs\jornallogin\economia.html">Economia</a>
-                        <a href="C:\xampp\htdocs\jornallogin\esporte.html">Esporte</a>
-                        <a href="C:\xampp\htdocs\jornallogin\contabilidade.html">Contabilidade</a>
-                        <a href="C:\xampp\htdocs\jornallogin\nacionais.html">Nacionais</a>
-                        <a href="C:\xampp\htdocs\jornallogin\internacionais.html">Internacionais</a>
+                        <a href= "c:\xampp\htdocs\jornallogin\notícias\tecnologias.html">Tecnologia</a>
+                        <a href= "c:\xampp\htdocs\jornallogin\notícias\esporte.html">Esporte</a>
+                        <a href= "c:\xampp\htdocs\jornallogin\notícias\nacionais.html">Nacionais</a>
+                        <a href= "c:\xampp\htdocs\jornallogin\notícias\internacionais.html">Internacionais</a>
                     </div>
                 </li>
                 <li class="dropdown">
